--- a/index.html
+++ b/index.html
@@ -154,36 +154,40 @@
             </div>
         </section>
         <section class="item-section">
-            <div class="item-filter">
-                <div class="filter-title">
-                    <h3>Brand</h3>
+            <div class="item-box">
+                <div class="item-filter">
+                    <div class="filter-title">
+                        <h3>Brand</h3>
+                    </div>
+                    <div class="filter-brand-container">
+                        <button class="filter-button">View all</button>
+                        <button class="filter-button" data-category="nike">Nike</button>
+                        <button class="filter-button" data-category="dc">DC</button>
+                        <button class="filter-button" data-category="adidas">Adidas</button>
+                        <button class="filter-button" data-category="puma">Puma</button>
+                    </div>
+                    <div class="filter-title">
+                        <h3>Gender</h3>
+                    </div>
+                    <div class="filter-gender-container">
+                        <button class="filter-button">View all</button>
+                        <button class="filter-button" data-category="male">Male</button>
+                        <button class="filter-button" data-category="female">Female</button>
+                    </div>
+                    <div class="filter-title">
+                        <h3>Price</h3>
+                    </div>
+                    <div class="filter-price-container">
+                        <button class="filter-button" data-category="high-to-low">High to low</button>
+                        <button class="filter-button" data-category="low-to-high">Low to high</button>
+                    </div>
                 </div>
-                <div class="filter-brand-container">
-                    <button class="filter-button">View all</button>
-                    <button class="filter-button" data-category="nike">Nike</button>
-                    <button class="filter-button" data-category="dc">DC</button>
-                    <button class="filter-button" data-category="adidas">Adidas</button>
-                    <button class="filter-button" data-category="puma">Puma</button>
+                <div class="item-container">
+                    <div class="items">
+                        
+                    </div>
+                    <button class="item-section-button">Load More</button>
                 </div>
-                <div class="filter-title">
-                    <h3>Gender</h3>
-                </div>
-                <div class="filter-gender-container">
-                    <button class="filter-button">View all</button>
-                    <button class="filter-button" data-category="male">Male</button>
-                    <button class="filter-button" data-category="female">Female</button>
-                </div>
-                <div class="filter-title">
-                    <h3>Price</h3>
-                </div>
-                <div class="filter-price-container">
-                    <button class="filter-button" data-category="high-to-low">High to low</button>
-                    <button class="filter-button" data-category="low-to-high">Low to high</button>
-                </div>
-            </div>
-            <div class="item-container">
-
-            </div>
         </section>
         <section class="contact-section">
             <div class="info-container">
@@ -266,7 +270,6 @@
     </article>
 
     <script src="./script.js"></script>
-
 
 </body>
 
