--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <div class="nav-icon-cart-container">
                     <div class="cart-button">
                         <img src="./imgs/Nav-cart-icon.svg" alt="">
+                        <div class="cart-bubble">
+                            <p>0</p>
+                        </div>
                     </div>
                     <div class="cart-container">
                         <div class="cart-text">
@@ -33,22 +36,26 @@
                             <h3>Products</h3>
                         </div>
                         <div class="cart">
-                            <div class="cart-item-card">
+                            <!-- <div class="cart-item-card">
                                 <div class="card-item-img-container">
-
+                                    <img src="./imgs/adidas-shoes/Card-img-1.png" alt="">
                                 </div>
                                 <div class="card-item-info">
-                                    <div class="card-item-text"></div>
+                                    <div class="card-item-text">Air Jordan Mid 1</div>
                                     <div class="card-item-price-container">
-                                        <div class="card-item-price"></div>
+                                        <div class="card-item-price">$125.000</div>
                                         <div class="card-item-number-button">
-                                            <div class="item-number-add-button"></div>
-                                            <div class="item-number"></div>
-                                            <div class="item-number-subtract-button"></div>
+                                            <div class="item-number-subtract-button">-</div>
+                                            <div class="item-number">1</div>
+                                            <div class="item-number-add-button">+</div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
+                        </div>
+                        <div class="cart-total-price-container">
+                            <p>Total:</p>
+                            <p class="total-price">$402200</p>
                         </div>
                         <div class="cart-button-container">
                             <button class="cart-buy-button">Buy all</button>
@@ -192,7 +199,7 @@
                         <button class="filter-button" data-category="Adidas">Adidas</button>
                         <button class="filter-button" data-category="Puma">Puma</button>
                     </div>
-                    <div class="filter-title">
+                    <!-- <div class="filter-title">
                         <h3>Gender</h3>
                     </div>
                     <div class="filter-gender-container">
@@ -206,7 +213,7 @@
                     <div class="filter-price-container">
                         <button class="filter-button" data-category="high-to-low">High to low</button>
                         <button class="filter-button" data-category="low-to-high">Low to high</button>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="item-container">
                     <div class="items">
