--- a/index.html
+++ b/index.html
@@ -287,9 +287,8 @@
             <h4>COPYRIGHT 2023 WALK INC. ALL RIGHTS RESERVED</h4>
         </section>
     </article>
-
+    <div class="add-modal"></div>
     <script src="./script.js"></script>
-
 </body>
 
 </html>
